# cli

./: .gitignore  .travis.yml  404.html  CNAME  LICENSE  Makefile  README.md  api-basics.html  backups.html  deploy.sh  docker-compose.yml  dot_env_template  generate_keys.py  hashmap.json  index.html  install-windows.html  install.html  package-lock.json  package.json  pyproject.toml  pythonpackage.yml  resources.html  rotate-postgres-password.html  setup.cfg  setup.py  sonar-project.properties  tox.ini  upload.html  webcam.html
.circleci/: config.yml
.docker/: Dockerfile_postgres  Dockerfile_redis
.github/workflows/: docsdeploy.yml  pythonpackage.yml  pythonpublish.yml  tests.yml
arcsecond/: __init__.py  __version__.py  api.py  cli.py  config.py  errors.py  lasilla.py  options.py  targets.py
arcsecond/api/: __init__.py  _base.py  _constants.py  _error.py  _main.py  activities.py  api.py  auth.py  base.py  charts.py  config.py  constants.py  datasets.py  endpoint.py  error.py  helpers.py  main.py  objects.py  observingruns.py  observingsites.py  profiles.py  resources.py
arcsecond/cloud/: __init__.py  auth.py  resources.py  uploads.py
arcsecond/hosting/: __init__.py  backups.py  checks.py  constants.py  containers.py  images.py  license.py  local.py  main.py  setup.py  utils.py  validation.py
arcsecond/imagesources/: commands.py  proxy.py  registry.py
arcsecond/uploader/: __init__.py  constants.py  context.py  errors.py  logger.py  uploader.py  utils.py  walker.py
arcsecond/webcam/: commands.py  proxy.py
assets/: Home.2495655a.js  api-basics.md.Byp-pVan.js  api-basics.md.Byp-pVan.lean.js  app.ByhPcWwL.js  app.e847d982.js  app.xZ4EXbas.js  backups.md.l6DH2CPt.js  backups.md.l6DH2CPt.lean.js  index.md.63fa2683.js  index.md.63fa2683.lean.js  index.md.CePKRAp3.js  index.md.D-5B3WZg.js  index.md.DpHLQeOZ.js  index.md.DpHLQeOZ.lean.js  index.md.bsfOKA4_.js  index.md.bsfOKA4_.lean.js  install-windows.md.BkPmyW95.js  install-windows.md.BkPmyW95.lean.js  install.md.B2eyi1no.js  install.md.B2eyi1no.lean.js  install.md.BkJiL8kh.js  install.md.BkJiL8kh.lean.js  install.md.D500-zQD.js  install.md.D500-zQD.lean.js  install_index.md.6ecafccb.js  install_index.md.6ecafccb.lean.js  plugin-vue_export-helper.05763f57.js  resources.md.Cc-DV1xY.js  resources.md.Cc-DV1xY.lean.js  rotate-postgres-password.md.BIQSUWcS.js  rotate-postgres-password.md.BIQSUWcS.lean.js  style.9dd27658.css  style.Dhc0NOW3.css  style.Gp7Dt3i2.css  upload.md.taCChpAU.js  upload.md.taCChpAU.lean.js  webcam.md.C_GTIcEM.js  webcam.md.C_GTIcEM.lean.js
assets/chunks/: framework.BZ-K7CQ_.js  framework.RzY3PHZ4.js  theme.BMmk1nQX.js  theme.BgRS3rOn.js
docs/: CNAME  api-basics.md  backups.md  index.md  install-windows.md  install.md  resources.md  rotate-postgres-password.md  targets.md  upload.md  webcam.md
docs/.vitepress/: config.js
docs/guide/: cli.md  index.md
docs/install/: index.md
docs/observations/: index.md
examples/: example_upload_files.py  example_upload_images.py
install/: index.html
tests/: conftest.py  test_activities.py  test_arcsecond_root.py  test_auth.py  test_cli.py  test_cli2.py  test_datasets.py  test_datasets_organisations.py  test_datasets_personal.py  test_hosting_local.py  test_targets_planning.py  utils.py
tests/api/: test_api.py  test_api_endpoint.py  test_cli_options.py  test_config.py  test_targets.py
tests/cli/: test_activities.py  test_auth.py  test_cli_options.py  test_config.py  test_datasets_organisations.py  test_datasets_personal.py  test_nightlogs_organisations.py
tests/fixtures/: file1.fits
(+57 files in other folders)
