[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arcsecond"
# Make sure to update __version__.py too
version = "3.7.0"
authors = [
    { name = "Cedric Foellmi", email = "cedric@arcsecond.io" },
]
description = "CLI for arcsecond.io"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    "Operating System :: OS Independent",
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries :: Python Modules'
]
dependencies = [
    'click>=8',
    'configparser',
    'docker',
    'httpx',
    "tqdm (>=4.67.1,<5.0.0)",
    'py-machineid',
    'wait-for-it',
]

[project.scripts]
arcsecond = "arcsecond.cli:main"

[project.urls]
Homepage = "https://github.com/arcsecond-io/cli"
Issues = "https://github.com/arcsecond-io/cli/issues"
Documentation = "https://docs.arcsecond.io"

[tool.setuptools.package-data]
"arcsecond.hosting.docker" = ["docker-compose.yml"]
