[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arcsecond"
version = "3.9.1"
authors = [
    { name = "Cedric Foellmi", email = "cedric@arcsecond.io" },
]
description = "CLI for arcsecond.io"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    "Operating System :: OS Independent",
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries :: Python Modules'
]
dependencies = [
    'click>=8',
    'configparser',
    'docker',
    'httpx',
    "tqdm (>=4.67.1,<5.0.0)",
    'py-machineid',
    'wait-for-it',
]

[project.optional-dependencies]
# Webcam proxy: native host process that lets Docker containers reach USB webcams.
# Install with: pip install arcsecond[webcam]
webcam = [
    'aiohttp>=3.9',
    'opencv-python-headless>=4.10,<5',
]

[project.scripts]
arcsecond = "arcsecond.cli:main"

[project.urls]
Homepage = "https://github.com/arcsecond-io/cli"
Issues = "https://github.com/arcsecond-io/cli/issues"
Documentation = "https://docs.arcsecond.io"

[tool.setuptools.package-data]
"arcsecond.hosting.docker" = ["docker-compose.yml"]
